--- a/src/browser/index.html
+++ b/src/browser/index.html
@@ -8,5 +8,5 @@
     <h1>Hello from Electron renderer!</h1>
     <p>👋</p>
   </body>
-  <script src="web.js"></script>
+  <script src="index.js"></script>
 </html>
